[gd_scene load_steps=7 format=3 uid="uid://0yyjmb4n6pkc"]

[ext_resource type="Texture2D" uid="uid://6ipevrql2rym" path="res://assets/falling-platform-brown.png" id="1_1t8ix"]
[ext_resource type="Script" path="res://scripts/plataforma.gd" id="1_kucjv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jh68a"]
size = Vector2(32, 16)

[sub_resource type="Animation" id="Animation_pcwtn"]
resource_name = "shake"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, 0), Vector2(0, 0), Vector2(-2, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_61r1b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ktdqs"]
_data = {
"RESET": SubResource("Animation_61r1b"),
"shake": SubResource("Animation_pcwtn")
}

[node name="plataforma" type="AnimatableBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_kucjv")

[node name="texture" type="Sprite2D" parent="."]
texture = ExtResource("1_1t8ix")

[node name="collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_jh68a")
one_way_collision = true

[node name="respaw_time" type="Timer" parent="."]

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ktdqs")
}

[connection signal="timeout" from="respaw_time" to="." method="_on_respaw_time_timeout"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
